backend/cluster/k3s/overlays/k3d/mainapi-local-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainapi
  namespace: bc-ai-account
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: mainapi
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "250m"
              memory: "384Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
