backend/cluster/k3s/overlays/k3d/ingress-local-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainapi
  namespace: bc-ai-account
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mainapi
                port:
                  name: http
